--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/tailwind.css" rel="stylesheet">
     <link href="/stylesheets/style.css" rel="stylesheet">
     <title>Armadillo Materials</title>
 </head>
