--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     {{{ body }}}
 
 {{!-- Contact Form --}}
-    <div class="relative flex items-top justify-center min-h-screen bg-white dark:bg-gray-900 sm:items-center sm:pt-0">
+    <div class="relative flex items-top justify-center min-h-screen dark:bg-gray-900 sm:items-center sm:pt-0">
         <div class="max-w-6xl mx-auto sm:px-6 lg:px-8">
             <div class="mt-8 overflow-hidden">
                 <div class="grid grid-cols-1 md:grid-cols-2">
@@ -53,7 +53,7 @@
                         </div>
                     </div>
 
-                    <form class="p-6 flex flex-col justify-center">
+                    {{!-- <form class="p-6 flex flex-col justify-center">
                         <div class="flex flex-col">
                             <label for="name" class="hidden">Full Name</label>
                             <input type="name" name="name" id="name" placeholder="Full Name" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none">
@@ -72,7 +72,7 @@
                         <button type="submit" class="md:w-32 bg-indigo-600 hover:bg-blue-dark text-white font-bold py-3 px-6 rounded-lg mt-3 hover:bg-indigo-500 transition ease-in-out duration-300">
                             Submit
                         </button>
-                    </form>
+                    </form> --}}
                 </div>
             </div>
         </div>
