--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/stylesheets/tailwind.css" rel="stylesheet">
     <link href="/stylesheets/style.css" rel="stylesheet">
+    <link href="/stylesheets/login.css" rel="stylesheet" href="">
     <title>Armadillo Materials</title>
 </head>
 <body>
