connected contact-us route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,6 +26,11 @@
 
     <!--====== Login CSS ======-->
     <link href="../../public/stylesheets/login.css" rel="stylesheet" href="">
+
+    <!--====== employee-signup CSS ======-->
+    <link href="../../public/stylesheets/emloyee-signup-style.css" rel="stylesheet" href="">
+
+
 </head>
 <body>
     {{{ body }}}
