fixing the file links

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,22 +10,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="../../public/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
     <!--====== Animate CSS ======-->
-    <link rel="stylesheet" href="../../public/stylesheets/animate.css">
+    <link rel="stylesheet" href="/stylesheets/animate.css">
 
     <!--====== Slick CSS ======-->
-    <link rel="stylesheet" href="../../public/stylesheets/tiny-slider.css">
+    <link rel="stylesheet" href="/stylesheets/tiny-slider.css">
 
     <!--====== Line Icons CSS ======-->
-    <link rel="stylesheet" href="../../public/fonts/lineicons/font-css/LineIcons.css">
+    <link rel="stylesheet" href="/fonts/lineicons/font-css/LineIcons.css">
 
     <!--====== Tailwind CSS ======-->
-    <link rel="stylesheet" href="../../public/stylesheets/tailwindcss.css">
-
+    <link rel="stylesheet" href="/stylesheets/tailwindcss.css">
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <!--====== Login CSS ======-->
-    <link href="../../public/stylesheets/login.css" rel="stylesheet" href="">
+    <link href="/stylesheets/login.css" rel="stylesheet" href="">
 </head>
 <body>
     {{{ body }}}
@@ -34,7 +35,7 @@
     <section id="contact" class="contact_area relative pt-18 pb-120">
         <div class="contact_image flex items-center justify-end">
             <div class="image lg:pr-13">
-                <img src="../../public/images/contact.svg" alt="about">
+                <img src="/images/contact.svg" alt="about">
             </div>
         </div> <!-- about image -->
 
@@ -91,13 +92,13 @@
 <!--====== CONTACT PART ENDS ======-->
 
 <!--====== Tiny Slider js ======-->
-    <script src="../../public/js/tiny-slider.js"></script>
+    <script src="/js/tiny-slider.js"></script>
 
 <!--====== Wow js ======-->
-    <script src="../../public/js/wow.min.js"></script>
+    <script src="/js/wow.min.js"></script>
 
 <!--====== Main js ======-->
-    <script src="../../public/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
 
