modularized the contact form

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,6 +1,8 @@
 <nav class="relative bg-green-300 border-b-2 border-gray-300 text-gray-900 style-stuff">
   <div class="container mx-auto flex justify-between">
-    <div class="relative block p-4 lg:p-6 text-xl text-blue-600 font-bold">Logo</div>
+    <div class="relative block p-4 lg:p-6">
+      <img src="/images/ArmadilloMaterialsGreenLogo.png">
+    </div>
     <ul class="flex">
       <li>
         <div class="menu">
