created dashboard page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,10 +23,17 @@
 
     <!--====== Tailwind CSS ======-->
     <link rel="stylesheet" href="/stylesheets/tailwindcss.css">
+
     <!-- Style CSS -->
     <link rel="stylesheet" href="/stylesheets/style.css">
+
     <!--====== Login CSS ======-->
     <link href="/stylesheets/login.css" rel="stylesheet" href="">
+
+    <!--====== Dashboard CSS ======-->
+    <link href="/stylesheets/dashboard.css" rel="stylesheet" href="">
+
+
 </head>
 <body>
     {{{ body }}}
