--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -3,9 +3,15 @@
     <h2 class="form-signin-heading">Please login</h2>
     <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
     <input type="password" class="form-control" name="password" placeholder="Password" required="" />
-    <label class="checkbox">
-      <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-    </label>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" id='login'>Login</button>
+  </form>
+</div>
+
+<div class="wrapper">
+  <form class="form-signin">
+    <h2 class="form-signin-heading">Please sign up</h2>
+    <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
+    <input type="password" class="form-control" name="password" placeholder="Password" required="" />
+    <button class="btn btn-lg btn-primary btn-block" type="submit" id = 'signup'>Sign up</button>
   </form>
 </div>
