--- a/views/employee-login.handlebars
+++ b/views/employee-login.handlebars
@@ -1,3 +1,21 @@
 <h1>Employee Login</h1>
 
-{{> login}}
+<div class="wrapper">
+  <form class="form-signin">
+    <h2 class="form-signin-heading">Please login</h2>
+    <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" id = "email-login"/>
+    <input type="password" class="form-control" name="password" placeholder="Password" required="" id = "password-login"/>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" id='login'>Login</button>
+  </form>
+</div>
+
+<div class="wrapper">
+  <form class="form-signin">
+    <h2 class="form-signin-heading">Please sign up</h2>
+    <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" id = "email-signup"/>
+    <input type="password" class="form-control" name="password" placeholder="Password" required="" id = "password-signup"/>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" id = 'signup'>Sign up</button>
+  </form>
+</div>
+
+<script src = '/js/log-in.js'></script>
