added dummy product cards

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,6 +33,9 @@
     <!--====== Dashboard CSS ======-->
     <link href="/stylesheets/dashboard.css" rel="stylesheet" href="">
 
+    <!--====== Products CSS ======-->
+    <link href="/stylesheets/products.css" rel="stylesheet" href="">
+
 
 </head>
 <body>
