--- a/views/products copy.handlebars
+++ b/views/products copy.handlebars
@@ -1,4 +1,4 @@
-{{!-- <div
+<div
   style="min-height: 300vh;"
   class="relative flex flex-col px-4 pt-24 pb-12 font-sans text-gray-700 bg-gray-200 sm:px-6 lg:px-8"
 >
@@ -109,30 +109,4 @@
       </p>
     </div>
   </div>
-</div> --}}
-
-
-<div id="container">
-
-    <div class="card">
-        <h2>Product 1</h2>
-        <img src="../public/images/Products/product-1-Granite-stone.jpeg" alt="product 1 Granite">
-        <p>This is information about product 1</p>
-    </div>
-    <div class="card">
-        <h2>Product 2</h2>
-        <img src="../public/images/Products/product-2-marble.jpeg" alt="product 1 Granite">
-        <p>This is information about product 2</p>
-    </div>
-    <div class="card">
-        <h2>Product 3</h2>
-        <img src="../public/images/Products/products-3-blue quartz 1.jpeg" alt="product 1 Granite">
-        <p>This is information about product 3</p>
-    </div>
-    <div class="card">
-        <h2>Product 4</h2>
-        <img src="../public/images/Products/product-4-limestone.jpeg" alt="product 1 Granite">
-        <p>This is information about product 4</p>
-    </div>
-
 </div>
