--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,19 +2,10 @@
     <nav class="main-menu">
         <ul>
             <li>
-                <a href="http://justinfarrow.com">
+                <a href="#">
                     <i class="fa fa-home fa-2x"></i>
                     <span class="nav-text">
                         Dashboard
-                    </span>
-                </a>
-
-            </li>
-            <li class="has-subnav">
-                <a href="#">
-                    <i class="fa fa-folder-open fa-2x"></i>
-                    <span class="nav-text">
-                        Add
                     </span>
                 </a>
             </li>
@@ -30,4 +21,7 @@
             </li>
         </ul>
     </nav>
+</div>
+<div class = >
+    <h1> here is where the link suppose to go </h1>
 </div>
