added dummy products to products.handlebars

--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,2 +1,40 @@
 <h1> PRODUCTS >>>>>>>>>>>>>></h1>
-{{> header nav}}
+{{!-- {{> header nav}} --}}
+
+<div id="container">
+
+    <div id="product-1" 
+        class="bg-white 
+            rounded 
+            overflow-hidden 
+            shadow 
+            m-20
+            ">
+
+        <img class="w-full h-32 sm:h-48 0bject-cover" src="/images/Products/product-1-Granite-stone.jpeg" alt="product 1">
+        <div class="m-4">
+            <span class="font-bold">Product 1: Granite</span>
+            <span class="block text-grey-500 text-sm ">Description of Product 1 - Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas sed, voluptatibus vero ullam tenetur unde laudantium consequuntur soluta molestiae quae repellendus quasi nam nobis quam autem minima delectus est culpa!</span>
+        </div>
+    </div>
+    <div class="bg-white 
+            rounded 
+            overflow-hidden 
+            shadow 
+            m-20
+            ">
+        <img src="/images/Products/product-2-marble.jpeg" alt="product 2">
+        <div class="m-4">
+            <span class="font-bold">Product 2: Marble</span>
+            <span class="block text-gray-500 text-sm">Description of Product 2 - Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas sed, voluptatibus vero ullam tenetur unde laudantium consequuntur soluta molestiae quae repellendus quasi nam nobis quam autem minima delectus est culpa!</span>
+        </div>
+    </div>
+
+
+</div>
+
+
+
+
+
+{{!-- src="/images/Products/product-1-Granite-stone.jpeg" --}}
