update navbar to use tailwindcss

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
 <body>
     {{{ body }}}
 
-
+    {{> contact }}
 
 <!--====== Tiny Slider js ======-->
     <script src="/js/tiny-slider.js"></script>
