added video files for future use, added contact partial to main.handlebars, installed tailwind-aspect-ratio for hero video background

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,9 +37,11 @@
 </head>
 <body>
 
-    {{{ preloader }}}
+    {{!-- {{{ preloader }}} --}}
 
     {{{ body }}}
+
+    {{> contact }}
 
     {{> footer }}
 
