--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -39,7 +39,7 @@
                             </div> <!-- footer link -->
                         </div> <!-- footer link wrapper -->
                     </div>
-                    <div class="w-full md:w-2/3 lg:w-4/12">
+                    {{!-- <div class="w-full md:w-2/3 lg:w-4/12">
                         <div class="footer_subscribe mt-13 mx-3">
                             <h2 class="footer_title text-xl font-semibold text-white">Newsletter</h2>
                             <div class="subscribe_form text-right mt-9 relative">
@@ -49,7 +49,7 @@
                                 </form>
                             </div>
                         </div> <!-- footer subscribe -->
-                    </div>
+                    </div> --}}
                 </div> <!-- row -->
             </div> <!-- footer widget -->
             <div class="footer_copyright pt-3 pb-6 border-t-2 border-solid border-white border-opacity-10 sm:flex justify-between">
