dashboard route is functional with the logged in

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,16 +36,15 @@
 
 </head>
 <body>
-
+    
     {{{ preloader }}}
 
     {{{ body }}}
-
-
+    {{#unless loggedIn}}
     {{> footer }}
 
     {{> contact }}
-
+    {{/unless}}
 
 <!--====== Tiny Slider js ======-->
     <script src="/js/tiny-slider.js"></script>
