--- a/views/employee-login.handlebars
+++ b/views/employee-login.handlebars
@@ -2,7 +2,7 @@
 
 <div class="wrapper">
   <form class="form-signin">
-    <h2 class="form-signin-heading">Please login</h2>
+    <h2 class="form-signin-heading">Login</h2>
     <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" id = "email-login"/>
     <input type="password" class="form-control" name="password" placeholder="Password" required="" id = "password-login"/>
     <button class="btn btn-lg btn-primary btn-block" type="submit" id='login'>Login</button>
@@ -11,7 +11,7 @@
 
 <div class="wrapper">
   <form class="form-signin">
-    <h2 class="form-signin-heading">Please sign up</h2>
+    <h2 class="form-signin-heading">Sign up</h2>
     <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" id = "email-signup"/>
     <input type="password" class="form-control" name="password" placeholder="Password" required="" id = "password-signup"/>
     <button class="btn btn-lg btn-primary btn-block" type="submit" id = 'signup'>Sign up</button>
