commented out logo until we resize it

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,17 +37,13 @@
 </head>
 <body>
 
-    {{!-- {{{ preloader }}} --}}
+    {{{ preloader }}}
 
     {{{ body }}}
 
-
     {{> contact }}
-
 
     {{> footer }}
-
-    {{> contact }}
 
 
 <!--====== Tiny Slider js ======-->
