--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -28,7 +28,7 @@
                     <div class="w-full">
                         <nav class="flex items-center justify-between py-4 navbar navbar-expand-lg">
                             <a class="navbar-brand mr-5" href="index.html">
-                                <img class="h-10 w-10" src="/images/ArmadilloMaterialsGreenLogo.png" alt="Logo"></a>
+                                {{!-- <img class="h-10 w-10" src="/images/ArmadilloMaterialsGreenLogo.png" alt="Logo"></a> --}}
                             <button class="block navbar-toggler focus:outline-none lg:hidden" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
                                 <span class="toggler-icon"></span>
@@ -47,16 +47,16 @@
                                         <a class="page-scroll" href="#services">Services</a>
                                     </li>
                                     <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#work">Projects</a>
+                                        <a class="page-scroll" href="#projects">Projects</a>
                                     </li>
                                     <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#pricing">Pricing</a>
-                                    </li>
-                                    <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#blog">Blog</a>
+                                        <a class="page-scroll" href="#careers">Careers</a>
                                     </li>
                                     <li class="nav-item ml-5 lg:ml-11">
                                         <a class="page-scroll" href="#contact">Contact</a>
+                                    </li>
+                                    <li class="nav-item ml-5 lg:ml-11">
+                                        <a class="page-scroll" href="#dashboard">Dashboard</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
