update to handlebar files

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,17 +37,15 @@
 </head>
 <body>
 
-    {{!-- {{{ preloader }}} --}}
+    {{{ preloader }}}
+
+    {{> header }}
 
     {{{ body }}}
 
-
     {{> contact }}
-
 
     {{> footer }}
-
-    {{> contact }}
 
 
 <!--====== Tiny Slider js ======-->
