--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -28,7 +28,7 @@
                     <div class="w-full">
                         <nav class="flex items-center justify-between py-4 navbar navbar-expand-lg">
                             <a class="navbar-brand mr-5" href="index.html">
-                                <img class="h-10 w-10" src="/images/ArmadilloMaterialsGreenLogo.png" alt="Logo"></a>
+                                {{!-- <img class="h-10 w-10" src="/images/ArmadilloMaterialsGreenLogo.png" alt="Logo"></a> --}}
                             <button class="block navbar-toggler focus:outline-none lg:hidden" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
                                 <span class="toggler-icon"></span>
