fixed the navbar error

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,14 +32,16 @@
 
     <!--====== Dashboard CSS ======-->
     <link href="/stylesheets/dashboard.css" rel="stylesheet" href="">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.5.1/cdn.js" defer></script>
 
 </head>
 <body>
 
     {{{ preloader }}}
 
-    {{> header }}
+    {{> header}}
+
+    {{{body}}}
 
     {{> contact }}
 
