--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -37,27 +37,17 @@
 
                             <div class="absolute left-0 z-20 hidden w-full px-5 py-3 duration-300 bg-white lg:w-auto collapse navbar-collapse lg:block top-full mt-full lg:static lg:bg-transparent shadow lg:shadow-none" id="navbarOne">
                                 <ul id="nav" class="items-center content-start mr-auto lg:justify-end navbar-nav lg:flex">
+                            
                                     <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll active" href="#home">Home</a>
+                                        <a  href="/products">Products</a>
                                     </li>
                                     <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#about">About</a>
+                                        <a  href="/locations">Locations</a>
                                     </li>
                                     <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#services">Services</a>
+                                        <a  href="/contact-us">Contact</a>
                                     </li>
-                                    <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#projects">Projects</a>
-                                    </li>
-                                    <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#careers">Careers</a>
-                                    </li>
-                                    <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#contact">Contact</a>
-                                    </li>
-                                    <li class="nav-item ml-5 lg:ml-11">
-                                        <a class="page-scroll" href="#dashboard">Dashboard</a>
-                                    </li>
+                                    
                                 </ul>
                             </div> <!-- navbar collapse -->
                         </nav> <!-- navbar -->
@@ -65,7 +55,7 @@
                 </div> <!-- row -->
             </div> <!-- container -->
         </div> <!-- header navbar -->
-
+    </section>
 {{!-- <nav class="relative bg-green-300 border-b-2 border-gray-300 text-gray-900 style-stuff">
   <div class="container mx-auto flex justify-between">
     <div class="relative block p-4 lg:p-6">
