--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,7 +12,7 @@
         </ul>
         <ul class="logout">
             <li>
-                <a href="#">
+                <a href="#" id = 'logout'>
                     <i class="fa fa-power-off fa-2x"></i>
                     <span class="nav-text">
                         Logout
@@ -33,3 +33,6 @@
         {{/each}}
     </ol>
 </section>
+
+
+<script src = '/js/log-out.js'></script>
