--- a/views/contact-us.handlebars
+++ b/views/contact-us.handlebars
@@ -1,5 +1,7 @@
 
+    {{> contact }}
 
+    {{> footer }}
 <div class="container max-w-full mx-auto py-24 px-6">
     <div class="font-sans">
         <div class="max-w-sm mx-auto px-6">
@@ -63,6 +65,11 @@
     </div>
 </div>
 </div>
+
+
+  {{> contact }}
+
+  {{> footer }}
 
 {{!-- <style>
   /* RED BORDER ON INVALID INPUT */
