--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,4 +1,4 @@
-
+{{> header}}
 <div id="container">
 
     <div id="product-1"
@@ -28,5 +28,10 @@
         </div>
     </div>
 </div>
+
+
+{{> contact }}
+
+{{> footer }}
 
 {{!-- src="/images/Products/product-1-Granite-stone.jpeg" --}}
