--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
     <meta charset="UTF-8">
 
@@ -9,28 +9,28 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--====== Favicon Icon ======-->
+    {{!-- Favicon Icon --}}
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
-    <!--====== Animate CSS ======-->
+    {{!-- Animate CSS --}}
     <link rel="stylesheet" href="/stylesheets/animate.css">
 
-    <!--====== Slick CSS ======-->
+    {{!-- Slick CSS --}}
     <link rel="stylesheet" href="/stylesheets/tiny-slider.css">
 
-    <!--====== Line Icons CSS ======-->
+    {{!-- Line Icons CSS --}}
     <link rel="stylesheet" href="/fonts/lineicons/font-css/LineIcons.css">
 
-    <!--====== Tailwind CSS ======-->
+    {{!-- Tailwind CSS --}}
     <link rel="stylesheet" href="/stylesheets/tailwindcss.css">
 
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    {{!-- <!-- Style CSS -->
+    <link rel="stylesheet" href="/stylesheets/style.css"> --}}
 
-    <!--====== Login CSS ======-->
+    {{!-- Login CSS --}}
     <link href="/stylesheets/login.css" rel="stylesheet" href="">
 
-    <!--====== Dashboard CSS ======-->
+    {{!-- Dashboard CSS --}}
     <link href="/stylesheets/dashboard.css" rel="stylesheet" href="">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.5.1/cdn.js" defer></script>
 
