separated nav bar and 'home' hero

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -55,7 +55,7 @@
         </div> <!-- container -->
     </div> <!-- header navbar -->
 
-    <div id="home" class="header_hero bg-gray relative z-10 overflow-hidden lg:flex items-center">
+    {{!-- <div id="home" class="header_hero bg-gray relative z-10 overflow-hidden lg:flex items-center">
         <div class="container">
                 <div class="row">
                     <div class="w-full lg:w-1/2">
@@ -68,7 +68,7 @@
                         </div> <!-- header hero content -->
                     </div>
                 </div> <!-- row -->
-            </div> <!-- container -->
+        </div> <!-- container -->
             <div class="lg:block"></div>
 
             <div class="header_image flex items-center">
@@ -76,5 +76,6 @@
                     <img src="/images/hero-background.jpg" alt="Header Image">
                 </div>
             </div> <!-- header image -->
-        </div> <!-- header hero -->
+    </div> <!-- header hero --> --}}
+
 </section>
