--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -55,6 +55,9 @@
         </div> <!-- container -->
     </div> <!-- header navbar -->
 
+    {{!-- Empty space for navbar --}}
+    <div style="margin-top: 120px ;"></div>
+
     {{!-- <div id="home" class="header_hero bg-gray relative z-10 overflow-hidden lg:flex items-center">
         <div class="container">
                 <div class="row">
