--- a/views/locations.handlebars
+++ b/views/locations.handlebars
@@ -1,7 +1,12 @@
-{{> header}}
 
-<h1>Locations page</h1>
 
+
+<div style="margin: 5% 20%;">
+    <iframe style="border: 5px solid black;"src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d261751.3765055072!2d-97.79926072495189!3d30.46010323790286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1637542608317!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div>
+        Location Stuff Blah Blah.
+    </div>
+</div>
 
 
 {{> contact }}
