--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{!-- Favicon Icon --}}
+    {{!-- icon Icon --}}
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
     {{!-- Animate CSS --}}
