--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-{{!-- <div class="area"></div>
+<div class="area"></div>
     <nav class="main-menu">
         <ul>
             <li>
@@ -21,7 +21,7 @@
             </li>
         </ul>
     </nav>
-</div> --}}
+</div>
 {{!-- Admin dashboard form to post resources --}}
 {{!-- If admin id allow access --}}
 {{#if admin}}
