--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,6 +43,8 @@
 
     {{{body}}}
 
+    {{> footer}}
+
 <!--====== Tiny Slider js ======-->
     <script src="/js/tiny-slider.js"></script>
 
@@ -53,4 +55,3 @@
     <script src="/js/main.js"></script>
 </body>
 </html>
-
