update to package.json by including tailwind build script, add php for contact us

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -62,31 +62,5 @@
     </div> <!-- header navbar -->
 
     {{!-- Empty space for navbar --}}
-    <div style="margin-top: 120px ;"></div>
-
-    {{!-- <div id="home" class="header_hero bg-gray relative z-10 overflow-hidden lg:flex items-center">
-        <div class="container">
-            <div class="row">
-                <div class="w-full lg:w-1/2">
-                    <div class="header_hero_content pt-150 lg:pt-0">
-                        <h2 class="hero_title text-2xl sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl font-extrabold">
-                            Armadillo <span class="text-theme-color">Materials</span></h2>
-                        <p class="mt-8 lg:mr-8">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                            eirmod tempor invidunt ut labore et dolore magna.</p>
-                        <div class="hero_btn mt-10">
-                            <a class="main-btn" href="#0">Get Started</a>
-                        </div>
-                    </div> <!-- header hero content -->
-                </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-        <div class="lg:block"></div>
-
-        <div class="header_image flex items-center">
-            <div class="image 2xl:pl-25">
-                <img src="/images/hero-background.jpg" alt="Header Image">
-            </div>
-        </div> <!-- header image -->
-    </div> <!-- header hero --> --}}
-
+    {{!-- <div style="margin-top: 120px ;"></div> --}}
 </section>
