removed duped footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
 
     {{{body}}}
 
-    {{> footer}}
+    {{!-- {{> footer}} --}}
 
 <!--====== Tiny Slider js ======-->
     <script src="/js/tiny-slider.js"></script>
