update for admin

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,19 +22,18 @@
         </ul>
     </nav>
 </div>
-{{!-- Admin dashboard form to post resources --}}
-{{!-- If admin id allow access --}}
+
 {{#if admin}}
 <div class="admin-form flex justify-center">
-    <form>
+    <form id = 'link-form'>
         <input type="text" id="rname" value="" placeholder="Enter Resource Name">
         <input type="text" id="desc" value="" placeholder="Enter Resource Description">
         <input type="url" id="link" value="" placeholder="Enter Resource Link">
-        <input type="submit" id="resource-submit" value="Submit">
+        <button type="submit" id="resource-submit" value="Submit"> Submit </button> 
     </form>
 </div>
 {{/if}}
-{{!-- End of admin posting form --}}
+
 <section class = "flex justify-center">
     <ol>
         {{#each resources}}
