--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+{{> header}}
 {{!-- Home --}}
     <div id="home" class="header_hero bg-gray relative z-10 overflow-hidden lg:flex items-center">
         <div class="container">
