--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,29 +7,14 @@
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
-
-
     <link rel="stylesheet" href="/stylesheets/animate.css">
-
-
     <link rel="stylesheet" href="/stylesheets/tiny-slider.css">
-
     <link rel="stylesheet" href="/fonts/lineicons/font-css/LineIcons.css">
-
- 
     <link rel="stylesheet" href="/stylesheets/tailwindcss.css">
-
-
-
     <link href="/stylesheets/login.css" rel="stylesheet" href="">
-
-
     <link href="/stylesheets/dashboard.css" rel="stylesheet" href="">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.5.1/cdn.js" defer></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.5.1/cdn.js"></script>
 </head>
 <body>
 
