--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -18,7 +18,7 @@
 <!--====== PRELOADER PART ENDS ======--> --}}
 
 <!--====== HEADER PART START ======-->
-<nav class="bg-white">
+<nav class="bg-gray-800">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
